--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,css,md}\"",
     "type-check": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "check-all": "npm run type-check && npm run lint && npm run format:check && echo '\n🔍 Accessibility linting built into ESLint'",
     "fix-all": "npm run format && npm run lint:fix",
     "a11y:axe": "axe http://localhost:5173",
@@ -34,6 +36,8 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.6.1",
     "@axe-core/cli": "^4.10.2",
     "@eslint/js": "^9.36.0",
     "@testing-library/jest-dom": "^6.8.0",
@@ -51,6 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
+    "jsdom": "^26.0.0",
     "jest-axe": "^10.0.0",
     "lighthouse-ci": "^1.13.1",
     "lint-staged": "^16.2.1",
@@ -59,6 +64,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
-    "typescript-eslint": "^8.44.0"
+    "typescript-eslint": "^8.44.0",
+    "vitest": "^1.6.0"
   }
 }
