Add entity profiles with citations and dynamic comparison view

--- a/app/public/data/2025-09-27/manifest.json
+++ b/app/public/data/2025-09-27/manifest.json
@@ -5,5 +5,6 @@
   "playlists": "playlists.json",
   "source": "content/bds_pack.json",
   "sources": "sources.json",
-  "assertions": "assertions.json"
+  "assertions": "assertions.json",
+  "entities": "entities.json"
 }
