--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,12 @@
 name = "dryvest"
+main = "worker.ts"
 compatibility_date = "2024-11-12"
 
 [assets]
 directory = "app/dist"
 
 [build]
-command = "npm --prefix app install && npm --prefix app run build"
+command = "npm --prefix app install && ln -sfn app/node_modules node_modules && npm --prefix app run build"
 
 [observability.logs]
 enabled = true
