--- a/app/public/data/2025-09-25/manifest.json
+++ b/app/public/data/2025-09-25/manifest.json
@@ -2,6 +2,5 @@
   "version": "2025-09-25",
   "schema": "schema.json",
   "nodes": "nodes.json",
-  "playlists": "playlists.json",
-  "source": "content/bds_pack.json"
+  "playlists": "playlists.json"
 }
